--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,44 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body{
+      min-height: 200mm;
+  }
 .centercontent {
     display: flex;
     justify-content: center;
+    margin-top: 20px;
+
+}
+
+.logo{
+   
+    background-color: #282c34;
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+}
+
+.title{
+    font-size: 40px;
+    text-align: center;
+}
+
+
+.list{
+    margin-bottom: 50px;
+    font-size: 20px;
+    font-weight: 400;
+    margin-right:98px ;
+}
+
+.singer{
+    font-size: 20px;
+    margin-bottom: 20px;
 }
