--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,21 @@
     box-sizing: border-box;
   }
   body{
-      min-height: 200mm;
+    width: 100vw; 
+
+  }
+  .container {
+    width: 100vw;
+    display: block;
+    margin: auto auto;
   }
 .centercontent {
     display: flex;
     justify-content: center;
     margin-top: 20px;
-
 }
 
 .logo{
-   
     background-color: #282c34;
     min-height: 50vh;
     display: flex;
@@ -25,9 +29,23 @@
     color: white;
 }
 
+.active {
+    background-color: khaki;
+}
 .title{
     font-size: 40px;
     text-align: center;
+}
+
+.img{
+    margin-bottom: 10px;
+
+}
+
+.type {
+margin-bottom: 10px;
+font-size: 20px;
+
 }
 
 
@@ -42,3 +60,18 @@
     font-size: 20px;
     margin-bottom: 20px;
 }
+
+@media (prefers-reduced-motion: no-preference) {
+    .App-logo {
+      animation: App-logo-spin infinite 15s linear;
+    }
+  }
+  
+  @keyframes App-logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
