--- a/src/App.css
+++ b/src/App.css
@@ -1,65 +1,68 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  body{
-    width: 100vw; 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  }
-  .container {
-    width: 100vw;
-    display: block;
-    margin: auto auto;
-  }
+body{
+  width: 100vw; 
+}
+
+.container {
+  width: 100vw;
+  display: block;
+  margin: auto auto;
+}
+
 .centercontent {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .logo{
-    background-color: #282c34;
-    min-height: 50vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+  background-color: #282c34;
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  margin-top: 0;
 }
 
 .active {
-    background-color: khaki;
-}
-.title{
-    font-size: 40px;
-    text-align: center;
+  color: #349682;
 }
 
 .img{
-    margin-bottom: 10px;
-
+  margin-bottom: 15px;
 }
-
-.type {
-margin-bottom: 10px;
-font-size: 20px;
-
-}
-
 
 .list{
-    margin-bottom: 50px;
-    font-size: 20px;
-    font-weight: 400;
-    margin-right:98px ;
+  margin-bottom: 50px;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: sans-serif;
+  margin-right:98px;
+  color: #2c3444;
 }
 
-.singer{
-    font-size: 20px;
-    margin-bottom: 20px;
+span {
+  display: block;
+  font-size: 22px;
+  font-weight: 600;
 }
+
+.like {
+  font-size: 40px;
+  position: relative;
+  top: -60px;
+  left: 270px;
+  width: 30px;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
     .App-logo {
